Очередная порция правок

--- a/www/add-blog.html
+++ b/www/add-blog.html
@@ -169,7 +169,7 @@
               </div>
 
 
-                <input type="submit" value="Опубликовать" class="button submit-button big tab-input"></input>
+                <input type="submit" value="Опубликовать" class="button submit-button middle tab-input"></input>
 
               </form>
             </div>
