--- a/www/add-company.html
+++ b/www/add-company.html
@@ -216,7 +216,7 @@
                   <button type="button" id="addPostPhoto" class="button middle">Добавить фото</button>
                 </div>
 
-                <input type="submit" value="Опубликовать" class="button submit-button big tab-input"></input>
+                <input type="submit" value="Опубликовать" class="button submit-button middle tab-input"></input>
               </form>
 
             </div>
