--- a/www/add-my-car.html
+++ b/www/add-my-car.html
@@ -301,7 +301,7 @@
                 </div>
               </div>
 
-              <input type="submit" value="Сохранить" <="" input="" class="button submit-button big tab-input">
+              <input type="submit" value="Сохранить" <="" input="" class="button submit-button middle tab-input">
               
             </form>
 
