--- a/www/edit-my-profile.html
+++ b/www/edit-my-profile.html
@@ -187,7 +187,7 @@
                   <p><textarea rows="3" cols="50" name="hobby" id="hobby" class="text tab-input"></textarea></p>
                 </div>
 
-                <input type="submit" value="Сохранить" <="" input="" class="button submit-button big tab-input">
+                <input type="submit" value="Сохранить" <="" input="" class="button submit-button middle tab-input">
 
               </form>
 
