--- a/www/flea-market.html
+++ b/www/flea-market.html
@@ -117,11 +117,12 @@
 
               <div class="b-main-title title-search">
               <!-- Колличество передать в атрибут data-sum -->
-                  <h3 data-sum="10">Все предложения</h3>
+                  <h1>Продажа</h1>
                 <div class="b-filter__find">
                   <input type="text" name="search" placeholder="Найти обьявление">
                 </div>
               </div>
+              <h3 data-sum="10">Все предложения</h3>
               <div class="b-ad__container pagin-container pagin-wrap">
 
 <!-- Для добавления стиля ТОП обьявления добавить атрибут "data-top-item" -->
@@ -396,84 +397,63 @@
               <a href="add-new-ad.html" title="" class="button middle add-button">Добавить обьявление</a>
             </div>
 
+          <div class="float-bar">
             <div class="block b-filter">
-              <div class="b-filter-wrapp">
-                <h4><span class="all-ad">Поиск обьявления</h4>
-                <form class="b-filter__form" name="filter">
-                  <div id="wrapperCategory" class="b-filter__form-item droplist">
-                    <select id="category">
-                      <option data-title value="all">Категории</option>
-                      <option>Колесо</option>
-                      <option>Авто</option>
-                      <option>Диски</option>
-                    </select>
-                  </div>
+                <div class="b-filter-wrapp">
+                  <h4><span class="all-ad">Поиск обьявления</h4>
+                  <form class="b-filter__form" name="filter">
+                    <div id="wrapperCategory" class="b-filter__form-item droplist">
+                      <select id="category">
+                        <option data-title value="all">Категории</option>
+                        <option>Колесо</option>
+                        <option>Авто</option>
+                        <option>Диски</option>
+                      </select>
+                    </div>
 
-                  <div id="wrapperMark" class="b-filter__form-item droplist">
-                    <select id="mark">
-                      <option data-title value="all">Все марки</option>
-                      <option>Марка</option>
-                      <option>Марка</option>
-                      <option>Марка</option>
-                      <option>Марка</option>
-                      <option>Марка</option>
-                      <option>Марка</option>
-                      <option>Марка</option>
-                      <option>Марка</option>
-                      <option>Марка</option>
-                      <option>Марка</option>
-                    </select>
-                  </div>
+                    <div id="wrapperMark" class="b-filter__form-item droplist">
+                      <select id="mark">
+                        <option data-title value="all">Все марки</option>
+                        <option>Марка</option>
+                        <option>Марка</option>
+                        <option>Марка</option>
+                        <option>Марка</option>
+                        <option>Марка</option>
+                        <option>Марка</option>
+                        <option>Марка</option>
+                        <option>Марка</option>
+                        <option>Марка</option>
+                        <option>Марка</option>
+                      </select>
+                    </div>
 
-                  <div id="wrapperModel" class="b-filter__form-item droplist">
-                    <select id="model">
-                      <option data-title value="all">Все модели</option>
-                      <option>Модель</option>
-                      <option>Модель</option>
-                      <option>Модель</option>
-                      <option>Модель</option>
-                      <option>Модель</option>
-                      <option>Модель</option>
-                      <option>Модель</option>
-                      <option>Модель</option>
-                      <option>Модель</option>
-                      <option>Модель</option>
-                      <option>Модель</option>
-                      <option>Модель</option>
-                      <option>Модель</option>
-                    </select>
-                  </div>
+                    <div id="wrapperModel" class="b-filter__form-item droplist">
+                      <select id="model">
+                        <option data-title value="all">Все модели</option>
+                        <option>Модель</option>
+                        <option>Модель</option>
+                        <option>Модель</option>
+                        <option>Модель</option>
+                        <option>Модель</option>
+                        <option>Модель</option>
+                        <option>Модель</option>
+                        <option>Модель</option>
+                        <option>Модель</option>
+                        <option>Модель</option>
+                        <option>Модель</option>
+                        <option>Модель</option>
+                        <option>Модель</option>
+                      </select>
+                    </div>
 
-                  <p class="icon-search"><input type="submit" value="Найти" class="button middle tab-input"></p>
-                </form>
-              </div>
-            </div>
+                    <p class="icon-search"><input type="submit" value="Найти" class="button middle tab-input"></p>
+                  </form>
+                  <p>
+                    <a href='flea-market.html' class="b-contact__other-ad text bold" title="Последние просмотренные обьявления">Последние просмотренные</a>
+                  </p>
 
-            <div class="float-bar">
-              <div class="aside-panel-wrapp">
-                <div>
-                  <p class="b-filter-other-view text link"><a href='#' title="Последние просмотренные объявления">Последние просмотренные</a></p>
-                  <div class="b-contact__other-ad-item item">
-                    <figure>
-                      <img src="img/temp/auto/2.jpg" alt="">
-                    </figure>
-                    <a href="#" class="text" data-clamp="">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
-                  </div>
-                  <div class="b-contact__other-ad-item item">
-                    <figure>
-                      <img src="img/temp/auto/2.jpg" alt="">
-                    </figure>
-                    <a href="#" class="text" data-clamp="">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
-                  </div>
-                  <div class="b-contact__other-ad-item item">
-                    <figure>
-                      <img src="img/temp/auto/2.jpg" alt="">
-                    </figure>
-                    <a href="#" class="text" data-clamp="">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
-                  </div>
                 </div>
               </div>
-            </div>
 
           </section>
 
