--- a/www/my-page.html
+++ b/www/my-page.html
@@ -146,120 +146,127 @@
               <h3>Характеристики</h3>
               <div class="b-property-wrapp">
             <!-- Основные характеристики -->
-                <h4>Общие характеристики</h4>
-                <div class="b-property-string">
-                  <h6>Марка</h6>
-                  <p class="text">Nissan</p>
-                </div>
+                  <h4>Общие характеристики</h4>
+                  <div class="b-property-string">
+                    <p class="text">Марка</p>
+                    <p class="text">Nissan</p>
+                  </div>
 
-                <div class="b-property-string">
-                  <h6>Модель</h6>
-                  <p class="text">GT-R</p>
-                </div>
+                  <div class="b-property-string">
+                    <p class="text">Модель</p>
+                    <p class="text">GT-R</p>
+                  </div>
 
-                <div class="b-property-string">
-                  <h6>Пробег</h6>
-                  <p class="text">50 000 тыс км</p>
-                </div>
+                  <div class="b-property-string">
+                    <p class="text">Пробег</p>
+                    <p class="text">50 000 тыс км</p>
+                  </div>
 
-                <div class="b-property-string">
-                  <h6>Цвет</h6>
-                  <p class="text">Темно-краный</p>
-                </div>
+                  <div class="b-property-string">
+                    <p class="text">Цвет</p>
+                    <p class="text">Темно-краный</p>
+                  </div>
 
-                <div class="b-property-string">
-                  <h6>Тип трансмиссии</h6>
-                  <p class="text">Ручная</p>
-                </div>
+                  <div class="b-property-string">
+                    <p class="text">Тип трансмиссии</p>
+                    <p class="text">Ручная</p>
+                  </div>
 
-                <div class="b-property-string">
-                  <h6>Тип привода</h6>
-                  <p class="text">Передний</p>
-                </div>
+                  <div class="b-property-string">
+                    <p class="text">Тип привода</p>
+                    <p class="text">Передний</p>
+                  </div>
 
-                <div class="b-property-string">
-                  <h6>Расход по городу</h6>
-                  <p class="text">11 л/км</p>
-                </div>
+                  <div class="b-property-string">
+                    <p class="text">Расход по городу</p>
+                    <p class="text">11 л/км</p>
+                  </div>
 
-                <div class="b-property-string">
-                  <h6>Расход по трассе, л/км</h6>
-                  <p class="text">6 л/км</p>
-                </div>
+                  <div class="b-property-string">
+                    <p class="text">Расход по трассе, л/км</p>
+                    <p class="text">6 л/км</p>
+                  </div>
 
-            <!-- Замеры -->
-                <h4>Замеры</h4>
+                <!-- Замеры -->
+                  <h4>Замеры</h4>
 
-                <div class="b-property-string">
-                  <h6>Динамика 0-100, c</h6>
-                  <p class="text">5</p>
-                </div>
+                  <div class="b-property-string">
+                    <p class="text">Динамика 0-100, c</p>
+                    <p class="text">5</p>
+                  </div>
 
-                <div class="b-property-string">
-                  <h6>Динамика 0-400, c</h6>
-                  <p class="text">40</p>
-                </div>
+                  <div class="b-property-string">
+                    <p class="text">Динамика 0-400, c</p>
+                    <p class="text">40</p>
+                  </div>
 
-                <div class="b-property-string">
-                  <h6>Расход по городу, л/км</h6>
-                  <p class="text">11</p>
-                </div>
+                  <div class="b-property-string">
+                    <p class="text">Расход по городу, л/км</p>
+                    <p class="text">11</p>
+                  </div>
 
-                <div class="b-property-string">
-                  <h6>Смешанный расход, л/км</h6>
-                  <p class="text">8</p>
-                </div>
+                  <div class="b-property-string">
+                    <p class="text">Смешанный расход, л/км</p>
+                    <p class="text">8</p>
+                  </div>
 
-                <div class="b-property-string">
-                  <h6>Расход по трассе, л/км</h6>
-                  <p class="text">5</p>
-                </div>
+                  <div class="b-property-string">
+                    <p class="text">Расход по трассе, л/км</p>
+                    <p class="text">5</p>
+                  </div>
 
-            <!-- Доработки -->
+                
+            <div class="row">
+              <div class=col xs-6"">
+                <!-- Доработки -->
                 <h4>Доработки</h4>
 
                 <div class="b-property-string">
-                  <h6>Чип</h6>
+                  <p class="text">Чип</p>
                   <p class="text">FGTech Galletto 2 Master</p>
                 </div>
 
                 <div class="b-property-string">
-                  <h6>Выхлоп</h6>
+                  <p class="text">Выхлоп</p>
                   <p class="text">Nissan Primera 1.8i-16V 05/02-07</p>
                 </div>
 
                 <div class="b-property-string">
-                  <h6>Впуск</h6>
+                  <p class="text">Впуск</p>
                   <p class="text">CTS Turbo</p>
                 </div>
 
                 <div class="b-property-string">
-                  <h6>Акустика</h6>
+                  <p class="text">Акустика</p>
                   <p class="text">Pioneer TS-A1733i</p>
                 </div>
 
-            <!-- Планируемые доработки -->
+              </div>
+              <div class=col xs-6"">
+                <!-- Планируемые доработки -->
                 <h4>Планируемые доработки</h4>
 
                 <div class="b-property-string">
-                  <h6>Чип</h6>
+                  <p class="text">Чип</p>
                   <p class="text">FGTech Galletto 2 Master</p>
                 </div>
 
                 <div class="b-property-string">
-                  <h6>Выхлоп</h6>
+                  <p class="text">Выхлоп</p>
                   <p class="text">Nissan Primera 1.8i-16V 05/02-07</p>
                 </div>
 
                 <div class="b-property-string">
-                  <h6>Впуск</h6>
+                  <p class="text">Впуск</p>
                   <p class="text">CTS Turbo</p>
                 </div>
 
                 <div class="b-property-string">
-                  <h6>Акустика</h6>
+                  <p class="text">Акустика</p>
                   <p class="text">Pioneer TS-A1733i</p>
                 </div>
+              </div>
+            </div>
 
               </div>
               
@@ -293,11 +300,13 @@
                         <p class="text subtext data">24.10.2016</p>
                       </div>
                       <p class="text" data-clamp>Установил… ГРОМКО всеравно, ну я не знаю, почему-то на этой машинке более громкий выхлоп чем на черной. Типично волговский рык. Глушитель Мотор Сич. Качество среднее. Не понравилось исполнение выходного фланца. Вообще это мне не нравится во всех Волговских глушителях. Но на предыдущем как-то поаккуратней этот выходной загиб вверх исполнен.</p>
-                      <div class="b-comments-view">
+                      <p class="b-rating-dislike-bar">
+                        <span class="rating-click minus-rating"></span>
+                        <span class="display-rating text">230</span>
+                        <span class="rating-click plus-rating"></span>
                         <span class="view text">234 просмотров</span>
-                        <span class="comments text">23 комментария</span>
-                        <span class="like text">24 оценили</span>
-                      </div>
+                        <a href="my-page.html" class="link comments text">23 комментария</a>
+                      </p>
                     </div>
                   </article>
                   <article class="b-logbook__container-item">
@@ -312,11 +321,13 @@
                         <p class="text subtext data">03.08.2016</p>
                       </div>
                       <p class="text" data-clamp>В выходные- старт!</p>
-                      <div class="b-comments-view">
+                      <p class="b-rating-dislike-bar">
+                        <span class="rating-click minus-rating"></span>
+                        <span class="display-rating text">230</span>
+                        <span class="rating-click plus-rating"></span>
                         <span class="view text">234 просмотров</span>
-                        <span class="comments text">23 комментария</span>
-                        <span class="like text">24 оценили</span>
-                      </div>
+                        <a href="my-page.html" class="link comments text">23 комментария</a>
+                      </p>
                     </div>
                   </article>
                   <article class="b-logbook__container-item">
@@ -331,11 +342,13 @@
                         <p class="text subtext data">13.05.2016</p>
                       </div>
                       <p class="text" data-clamp>Наконец-то установил ксенон в птф. Взял 4300к под оригинальный ближний цвет. Светит отлично! Ничего не заменит ксенона, какие лампы только не ставил!</p>
-                      <div class="b-comments-view">
+                      <p class="b-rating-dislike-bar">
+                        <span class="rating-click minus-rating"></span>
+                        <span class="display-rating text">230</span>
+                        <span class="rating-click plus-rating"></span>
                         <span class="view text">234 просмотров</span>
-                        <span class="comments text">23 комментария</span>
-                        <span class="like text">24 оценили</span>
-                      </div>
+                        <a href="my-page.html" class="link comments text">23 комментария</a>
+                      </p>
                     </div>
                   </article>
                   <p class="display-all text"><span>показать все записи</span></p>
@@ -362,16 +375,6 @@
                       <div class="b-comments-block">
                         <div class="b-comments-block-title">
                           <a href="#" class="text">Alen</a>
-                          <p class="rating-stars">
-                          <!-- Рейтинг добавить аттрибут 
-                               "data-aсtive" - целая звезда
-                         -->
-                            <span data-active=""></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                          </p>
                           <span class="text subtext data">03.10.2016</span>
                         </div>
                         <p class="b-comments-text text">Бывает и по литру, если действительно 20 уе, то, конечно, лучше её втарить. Бывает и по литру, если действительно 20 уе, то, конечно, лучше её втарить.</p>
@@ -383,16 +386,6 @@
                       <div class="b-comments-block">
                         <div class="b-comments-block-title">
                           <a href="#" class="text">Alen</a>
-                          <p class="rating-stars">
-                          <!-- Рейтинг добавить аттрибут 
-                               "data-aсtive" - целая звезда
-                         -->
-                            <span data-active=""></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                          </p>
                           <span class="text subtext data">15.08.2016</span>
                         </div>
                         <p class="b-comments-text text">Да, спасибо за помощь.В принципе по твоему названию и нашел нужное))</p>
@@ -403,7 +396,12 @@
 
                 <div class="b-comments__add">
                   <textarea name="add-comment" class="text" rows="4" cols="60" placeholder="Введите Ваше сообщение"></textarea>
-                  <button type="button" class="button middle submit-button">Отправить</button>
+                  <div class="block-hide-button">
+                    <p class="b-comments__add-buttons-wrapp">
+                      <input type="reset" class="button middle submit-button" value="Отменить" />
+                      <input type="submit" class="button middle submit-button" value="Отправить" />
+                    </p>
+                  </div>
                 </div>
 
                 <div class="b-company__pagination controll">
