--- a/www/one-ad-page.html
+++ b/www/one-ad-page.html
@@ -161,115 +161,112 @@
             <div class="b-one-ad__other block">
               <h3>Похожие обьявления</h3>
 
-              <div class="b-ad__item item">
-                <div class="b-ad__item-img">
-                  <figure>
-                    <img src="img/temp/auto/3.jpg" alt="">
-                  </figure>
-                </div>
-                <div class="b-ad__item-info">
-                  <div class="b-ad__item-info-top">
-                    <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
-                 </div>
-                </div>
-                <div class="b-ad__item-price text">
-                  <span>20</span> <span>$</span>
-                </div>
-              </div>
+                <div class="b-ad__item item">
+                  <div class="b-ad__item-img">
+                    <figure>
+                      <img src="img/temp/auto/11.jpg" alt="">
+                    </figure>
+                  </div>
+                  <div class="b-ad__item-info">
 
-              <div class="b-ad__item item">
-                <div class="b-ad__item-img">
-                  <figure>
-                    <img src="img/temp/auto/2.jpg" alt="">
-                  </figure>
-                </div>
-                <div class="b-ad__item-info">
-                  <div class="b-ad__item-info-top">
-                    <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
-                 </div>
-                </div>
-                <div class="b-ad__item-price text">
-                  <span>20</span> <span>$</span>
-                </div>
-              </div>
+                    <div class="b-ad__item-info-top">
+                      <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
+                    </div>
 
-              <div class="b-ad__item item">
-                <div class="b-ad__item-img">
-                  <figure>
-                    <img src="img/temp/auto/5.jpg" alt="">
-                  </figure>
+                    <div class="b-ad__item-info-bottom">
+                      <p class="wrap-tags">
+                        <a href="#" class="text subtext tag">Колеса</a>
+                        <a href="#" class="text subtext tag">диски</a>
+                      </p>
+                      <p class="b-ad__item-info-city text subtext">Kyiv</p>
+                      </div>
+                  </div>
+                  <div class="b-ad__item-price text">
+                    <span>20</span> <span>$</span>
+                  </div>
+<!--                   <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p> -->
                 </div>
-                <div class="b-ad__item-info">
-                  <div class="b-ad__item-info-top">
-                    <h5 data-clamp><a href="one-ad-page.html">Deleniti assumenda inventore mollitia.</a></h5>
-                 </div>
+
+                <div class="b-ad__item item">
+                  <div class="b-ad__item-img">
+                    <figure>
+                      <img src="img/temp/auto/3.jpg" alt="">
+                    </figure>
+                  </div>
+                  <div class="b-ad__item-info">
+
+                    <div class="b-ad__item-info-top">
+                      <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
+                    </div>
+
+                    <div class="b-ad__item-info-bottom">
+                      <p class="wrap-tags">
+                        <a href="#" class="text subtext tag">Колеса</a>
+                        <a href="#" class="text subtext tag">диски</a>
+                      </p>
+                      <p class="b-ad__item-info-city text subtext">Kyiv</p>
+                      </div>
+                  </div>
+                  <div class="b-ad__item-price text">
+                    <span>20</span> <span>$</span>
+                  </div>
+<!--                   <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p> -->
                 </div>
-                <div class="b-ad__item-price text">
-                  <span>200</span> <span>$</span>
+
+                <div class="b-ad__item item">
+                  <div class="b-ad__item-img">
+                    <figure>
+                      <img src="img/temp/auto/6.jpg" alt="">
+                    </figure>
+                  </div>
+                  <div class="b-ad__item-info">
+                    <div class="b-ad__item-info-top">
+                      <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
+                    </div>
+                    <div class="b-ad__item-info-bottom">
+                      <p class="wrap-tags">
+                        <a href="#" class="text subtext tag">Колеса</a>
+                        <a href="#" class="text subtext tag">диски</a>
+                        <a href="#" class="text subtext tag">фары</a>
+                      </p>
+                      <p class="b-ad__item-info-city text subtext">Barcelonaaaaaa</p>
+                      </div>
+                  </div>
+                  <div class="b-ad__item-price text">
+                    <span>300</span> <span>$</span>
+                  </div>
+<!--                   <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p> -->
                 </div>
-              </div>
 
             </div>
           </section>
 
           <section class="l-contact col xs-3">
-            <div class="block b-contact">
-              <div class="b-contact__saler">
-                <img src="img/temp/author/3.jpg" alt="Продавец" class="b-contact__saler-photo">
-                <p class="name text bold"><a href="my-page.html" title="">Leonidis Castonedis</a></p>
-                <p class="b-contact__saler-item city text">Lamia</p>
-                <p class="b-contact__saler-item tel">
-                  <span class="telephone text bold">Телефон</span>
-                  <a href="tel:+302105241296" title="Telephone" class="text">+30 21 0524 1296</a>
-                </p>
-                <p class="b-contact__saler-item email">
-                  <span class="text bold">E-mail</span>
-                  <a href="mailto:email@email.com?subject=feedback" title="E-mail" class="text">email@email.com</a>
-                </p>
-                <p class="b-contact__saler-item email">
-                  <span class="text bold">Skype</span>
-                  <a href="skype:leonidis.сast" title="Skype" class="text">leonidis.сast</a>
-                </p>
-              </div>
-              <button class="button middle" name="open-message-popup">Написать сообщение</button>
-            </div>
             <div class="wrapp-float">
-              <div class="b-contact__other-ad-wrapp float-bar">
+              <div class="block b-contact">
                 <div>
-                  <p class="b-contact__other-ad text bold" title="Другие обьявления" data-sum-ad="10">Другие обьявления продавца</p>
-                  <div class="b-contact__other-ad-item item">
-                    <figure>
-                      <img src="img/temp/auto/2.jpg" alt="">
-                    </figure>
-                    <a href="#" class="text" data-clamp="">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
-                  </div>
-                  <div class="b-contact__other-ad-item item">
-                    <figure>
-                      <img src="img/temp/auto/2.jpg" alt="">
-                    </figure>
-                    <a href="#" class="text" data-clamp="">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
-                  </div>
-                  <div class="b-contact__other-ad-item item">
-                    <figure>
-                      <img src="img/temp/auto/2.jpg" alt="">
-                    </figure>
-                    <a href="#" class="text" data-clamp="">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
-                  </div>
-                  <div class="b-contact__other-ad-item item">
-                    <figure>
-                      <img src="img/temp/auto/2.jpg" alt="">
-                    </figure>
-                    <a href="#" class="text" data-clamp="">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
-                  </div>
-                  <div class="b-contact__other-ad-item item">
-                    <figure>
-                      <img src="img/temp/auto/2.jpg" alt="">
-                    </figure>
-                    <a href="#" class="text" data-clamp="">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
-                  </div>
-                </div>
+                  <div class="b-contact__saler">
+                    <img src="img/temp/author/3.jpg" alt="Продавец" class="b-contact__saler-photo">
+                    <p class="name text bold"><a href="my-page.html" title="">Leonidis Castonedis</a></p>
+                    <p class="b-contact__saler-item city text">Lamia</p>
+                    <p class="b-contact__saler-item tel">
+                      <span class="telephone text bold">Телефон</span>
+                      <a href="tel:+302105241296" title="Telephone" class="text">+30 21 0524 1296</a>
+                    </p>
+                    <p class="b-contact__saler-item email">
+                      <span class="text bold">E-mail</span>
+                      <a href="mailto:email@email.com?subject=feedback" title="E-mail" class="text">email@email.com</a>
+                    </p>
+                    <p class="b-contact__saler-item email">
+                      <span class="text bold">Skype</span>
+                      <a href="skype:leonidis.сast" title="Skype" class="text">leonidis.сast</a>
+                    </p>
+                    <button class="button middle" name="open-message-popup">Написать сообщение</button>
+                    <p>
+                      <a href='flea-market.html' class="b-contact__other-ad text bold" title="Другие обьявления" data-sum-ad="10">Другие обьявления продавца</a>
+                    </p>
               </div>
-
+            </div>
           </section>
         </div>
         
