--- a/www/one-company-page.html
+++ b/www/one-company-page.html
@@ -155,7 +155,7 @@
                   <div class="b-form-item m-form-item_textarea m-form-item-inline">
                     <p><textarea rows="4" cols="60" name="message" class="text tab-input"></textarea></p>
                   </div>
-                  <input type="submit" value="Отправить" class="button submit-button big tab-input"></input>
+                  <input type="submit" value="Отправить" class="button submit-button middle tab-input"></input>
                 </form>
               </div>
             </div>
@@ -187,10 +187,10 @@
                     <h5 data-clamp><a href="one-item-news.html" data-clamp>Новость 1</a></h5>
                     <p class="text" data-clamp>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.</p>
-                    <div class="b-comments-view">
+                    <p class="b-rating-dislike-bar">
                       <span class="view text">234 просмотров</span>
-                      <span class="comments text">23 комментария</span>
-                    </div>
+                      <a href="my-page.html" class="link comments text">23 комментария</a>
+                    </p>
                   </div>
                 </div>
 
@@ -200,10 +200,10 @@
                     <p class="b-one-company__news-wrapp-item-text-date text">12.10.2016</p>
                     <h5 data-clamp><a href="one-item-news.html">Новость 2</a></h5>
                     <p class="text" data-clamp>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.</p>
-                    <div class="b-comments-view">
+                    <p class="b-rating-dislike-bar">
                       <span class="view text">234 просмотров</span>
-                      <span class="comments text">23 комментария</span>
-                    </div>
+                      <a href="my-page.html" class="link comments text">23 комментария</a>
+                    </p>
                   </div>
                 </div>
 
@@ -214,10 +214,10 @@
                     <h5 data-clamp><a href="one-item-news.html">Новость 3 em ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.</a></h5>
                     <p class="text" data-clamp>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.</p>
-                    <div class="b-comments-view">
+                    <p class="b-rating-dislike-bar">
                       <span class="view text">234 просмотров</span>
-                      <span class="comments text">23 комментария</span>
-                    </div>
+                      <a href="my-page.html" class="link comments text">23 комментария</a>
+                    </p>
                   </div>
                 </div>
 
@@ -228,10 +228,10 @@
                     <h5 data-clamp><a href="one-item-news.html">Новость 4</a></h5>
                     <p class="text" data-clamp>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.</p>
-                    <div class="b-comments-view">
+                    <p class="b-rating-dislike-bar">
                       <span class="view text">234 просмотров</span>
-                      <span class="comments text">23 комментария</span>
-                    </div>
+                      <a href="my-page.html" class="link comments text">23 комментария</a>
+                    </p>
                   </div>
                 </div>
 
@@ -370,7 +370,10 @@
                         </p>
                         <p id="message-rating" class="text"></p>
                       </div>
-                      <button type="button" class="button middle submit-button">Отправить</button>
+                      <p class="b-comments__add-buttons-wrapp">
+                        <input type="reset" class="button middle submit-button" value="Отменить" />
+                        <input type="submit" class="button middle submit-button" value="Отправить" />
+                      </p>
                     </div>
                     
                   </div>
