--- a/www/one-item-news.html
+++ b/www/one-item-news.html
@@ -170,16 +170,16 @@
               </div>
 
               <div class="b-post__item-bottom">
-                <div class="b-rating-dislike-bar">
+                <p class="b-rating-dislike-bar">
                   <span class="rating-click minus-rating"></span>
                   <span class="display-rating text">230</span>
                   <span class="rating-click plus-rating"></span>
                   <span class="date text">16.10.2016</span>
                   <span class="add text">Добавил</span>
                   <a href="my-page.html" class="link text">Georgis Kastanedipopulos</a>
-  <!--                 <span class="view text">234 просмотров</span>
-                  <span class="comments text">23 комментария</span> -->
-                </div>
+<!--                   <span class="view text">234 просмотров</span>
+                  <a href="my-page.html" class="link comments text">23 комментария</a> -->
+                </p>
                 <div class="b-one-news__social b-social">
                   <a href="#" class="b-social-item m-social-item_fb"></a>
                   <a href="#" class="b-social-item m-social-item_tw"></a>
@@ -192,11 +192,6 @@
             <div class="block b-comments">
               <div class="b-coment-wrapp paginator">
                 <h3>Комментарии</h3>
-
-              <p class="like-dislike">
-                <span class="like" title="Понравилось"></span>
-                <span class="dislike" title="Не понравилось"></span>
-              </p>
 
                 <div class="alert-register">
                   <h5>Участвовать в обсуждениях могут только зарегистрированные пользователи.</h5>
@@ -213,16 +208,6 @@
                       <div class="b-comments-block">
                         <div class="b-comments-block-title">
                           <a href="#" class="text">Alen</a>
-                          <p class="rating-stars">
-                          <!-- Рейтинг добавить аттрибут 
-                               "data-aсtive" - целая звезда
-                         -->
-                            <span data-active=""></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                          </p>
                           <span class="text subtext data">03.10.2016</span>
                         </div>
                         <p class="b-comments-text text">Бывает и по литру, если действительно 20 уе, то, конечно, лучше её втарить. Бывает и по литру, если действительно 20 уе, то, конечно, лучше её втарить.</p>
@@ -234,16 +219,6 @@
                       <div class="b-comments-block">
                         <div class="b-comments-block-title">
                           <a href="#" class="text">Alen</a>
-                          <p class="rating-stars">
-                          <!-- Рейтинг добавить аттрибут 
-                               "data-aсtive" - целая звезда
-                         -->
-                            <span data-active=""></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                          </p>
                           <span class="text subtext data">15.08.2016</span>
                         </div>
                         <p class="b-comments-text text">Да, спасибо за помощь.В принципе по твоему названию и нашел нужное))</p>
@@ -254,7 +229,13 @@
 
                 <div class="b-comments__add">
                   <textarea name="add-comment" class="text" rows="4" cols="60" placeholder="Введите Ваше сообщение"></textarea>
-                  <button type="button" class="button middle submit-button">Отправить</button>
+                  <div class="block-hide-button">
+                    <p class="b-comments__add-buttons-wrapp">
+                      <input type="reset" class="button middle submit-button" value="Отменить" />
+                      <input type="submit" class="button middle submit-button" value="Отправить" />
+                    </p>
+                  </div>
+
                 </div>
 
                 <div class="b-company__pagination controll">
